HighLevelLanguage/parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    QUEUE
    LANGLE
    STACK
    RANGLE
    LIST
    PRINTLOG

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> agentDecl mwblock decls initblock
Rule 2     agentDecl -> AGENT BR CID
Rule 3     initblock -> INIT LPAREN RPAREN LCURLY events RCURLY
Rule 4     events -> event events
Rule 5     events -> empty
Rule 6     event -> robotinit
Rule 7     event -> getpos SEMI
Rule 8     event -> varname LPAREN RPAREN LCURLY pre eff RCURLY
Rule 9     event -> EXIT LPAREN RPAREN LCURLY pre eff RCURLY
Rule 10    getpos -> varname EQLS GETMYPOS LPAREN RPAREN
Rule 11    robotinit -> ROBOT LPAREN RPAREN SEMI
Rule 12    pre -> PRE LPAREN cond RPAREN SEMI
Rule 13    pre -> PRE LPAREN TRUE RPAREN SEMI
Rule 14    cond -> rel
Rule 15    cond -> expr
Rule 16    cond -> flag
Rule 17    cond -> ISEMPTY LPAREN varname RPAREN
Rule 18    cond -> cond AND cond
Rule 19    cond -> cond OR cond
Rule 20    cond -> NOT expr
Rule 21    cond -> LPAREN cond RPAREN
Rule 22    flag -> DONEFLAG
Rule 23    flag -> FAILFLAG
Rule 24    rel -> expr EQ expr
Rule 25    rel -> expr NEQ expr
Rule 26    rel -> expr GEQ expr
Rule 27    rel -> expr LEQ expr
Rule 28    rel -> expr GE expr
Rule 29    rel -> expr LE expr
Rule 30    eff -> EFF LCURLY stmts RCURLY
Rule 31    stmts -> stmt stmts
Rule 32    stmts -> empty
Rule 33    stmt -> asgn
Rule 34    stmt -> exit
Rule 35    stmt -> ite
Rule 36    stmt -> atomic
Rule 37    stmt -> remove
Rule 38    stmt -> update
Rule 39    stmt -> msg
Rule 40    stmt -> funcCall
Rule 41    stmt -> getInput
Rule 42    stmt -> varname EQLS funcCall
Rule 43    stmt -> doreachavoid
Rule 44    stmt -> return
Rule 45    stmt -> log
Rule 46    update -> UPDATE LPAREN varname RPAREN SEMI
Rule 47    getInput -> varname EQLS GETINPUT LPAREN RPAREN SEMI
Rule 48    msg -> MSG LPAREN varname RPAREN SEMI
Rule 49    log -> LOG LPAREN RPAREN SEMI
Rule 50    log -> LOG LPAREN DONEFLAG RPAREN SEMI
Rule 51    log -> LOG LPAREN FAILFLAG RPAREN SEMI
Rule 52    remove -> REMOVE LPAREN varname COMMA varname RPAREN SEMI
Rule 53    exit -> EXIT SEMI
Rule 54    return -> RETURN expr SEMI
Rule 55    doreachavoid -> DOREACHAVOID LPAREN varname COMMA expr RPAREN SEMI
Rule 56    ite -> IF LPAREN cond RPAREN LCURLY stmts RCURLY ELSE LCURLY stmts RCURLY
Rule 57    funcCall -> varname LPAREN args RPAREN SEMI
Rule 58    args -> empty
Rule 59    args -> neargs
Rule 60    neargs -> expr
Rule 61    neargs -> expr COMMA neargs
Rule 62    atomic -> ATOMIC LCURLY stmts RCURLY
Rule 63    asgn -> varname EQLS expr SEMI
Rule 64    asgn -> varname INCR SEMI
Rule 65    mwblock -> MW LCURLY decls RCURLY
Rule 66    decls -> decl decls
Rule 67    decls -> sharedecl decls
Rule 68    decls -> enumdecl decls
Rule 69    decls -> mapdecl decls
Rule 70    decls -> empty
Rule 71    empty -> <empty>
Rule 72    decl -> type varname SEMI
Rule 73    decl -> type varname EQLS val SEMI
Rule 74    mapdecl -> MAP varname SEMI
Rule 75    enumdecl -> ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
Rule 76    varnames -> varname COMMA varnames
Rule 77    varnames -> varname
Rule 78    sharedecl -> SHARED type varname SEMI
Rule 79    sharedecl -> SHARED type varname EQLS val SEMI
Rule 80    val -> INUM
Rule 81    val -> FNUM
Rule 82    val -> TRUE
Rule 83    val -> FALSE
Rule 84    val -> NULL
Rule 85    expr -> val
Rule 86    expr -> varname
Rule 87    expr -> expr PLUS expr
Rule 88    expr -> expr MINUS expr
Rule 89    expr -> expr TIMES expr
Rule 90    expr -> expr BY expr
Rule 91    expr -> LPAREN expr RPAREN
Rule 92    type -> INT
Rule 93    type -> FLOAT
Rule 94    type -> BOOL
Rule 95    type -> ITEMPOSITION
Rule 96    type -> OBSTACLELIST
Rule 97    varname -> LID
Rule 98    varname -> CID

Terminals, with rules where they appear

AGENT                : 2
AND                  : 18
ATOMIC               : 62
BOOL                 : 94
BR                   : 2
BY                   : 90
CID                  : 2 98
COMMA                : 52 55 61 76
DONEFLAG             : 22 50
DOREACHAVOID         : 55
EFF                  : 30
ELSE                 : 56
ENUM                 : 75
EQ                   : 24
EQLS                 : 10 42 47 63 73 75 79
EXIT                 : 9 53
FAILFLAG             : 23 51
FALSE                : 83
FLOAT                : 93
FNUM                 : 81
GE                   : 28
GEQ                  : 26
GETINPUT             : 47
GETMYPOS             : 10
IF                   : 56
INCR                 : 64
INIT                 : 3
INT                  : 92
INUM                 : 80
ISEMPTY              : 17
ITEMPOSITION         : 95
LANGLE               : 
LCURLY               : 3 8 9 30 56 56 62 65 75
LE                   : 29
LEQ                  : 27
LID                  : 97
LIST                 : 
LOG                  : 49 50 51
LPAREN               : 3 8 9 10 11 12 13 17 21 46 47 48 49 50 51 52 55 56 57 91
MAP                  : 74
MINUS                : 88
MSG                  : 48
MW                   : 65
NEQ                  : 25
NOT                  : 20
NULL                 : 84
OBSTACLELIST         : 96
OR                   : 19
PLUS                 : 87
PRE                  : 12 13
PRINTLOG             : 
QUEUE                : 
RANGLE               : 
RCURLY               : 3 8 9 30 56 56 62 65 75
REMOVE               : 52
RETURN               : 54
ROBOT                : 11
RPAREN               : 3 8 9 10 11 12 13 17 21 46 47 48 49 50 51 52 55 56 57 91
SEMI                 : 7 11 12 13 46 47 48 49 50 51 52 53 54 55 57 63 64 72 73 74 75 78 79
SHARED               : 78 79
STACK                : 
TIMES                : 89
TRUE                 : 13 82
UPDATE               : 46
error                : 

Nonterminals, with rules where they appear

agentDecl            : 1
args                 : 57
asgn                 : 33
atomic               : 36
cond                 : 12 18 18 19 19 21 56
decl                 : 66
decls                : 1 65 66 67 68 69
doreachavoid         : 43
eff                  : 8 9
empty                : 5 32 58 70
enumdecl             : 68
event                : 4
events               : 3 4
exit                 : 34
expr                 : 15 20 24 24 25 25 26 26 27 27 28 28 29 29 54 55 60 61 63 87 87 88 88 89 89 90 90 91
flag                 : 16
funcCall             : 40 42
getInput             : 41
getpos               : 7
initblock            : 1
ite                  : 35
log                  : 45
mapdecl              : 69
msg                  : 39
mwblock              : 1
neargs               : 59 61
pgm                  : 0
pre                  : 8 9
rel                  : 14
remove               : 37
return               : 44
robotinit            : 6
sharedecl            : 67
stmt                 : 31
stmts                : 30 31 56 56 62
type                 : 72 73 78 79
update               : 38
val                  : 73 79 85
varname              : 8 10 17 42 46 47 48 52 52 55 57 63 64 72 73 74 75 75 75 76 77 78 79 86
varnames             : 75 76

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . agentDecl mwblock decls initblock
    (2) agentDecl -> . AGENT BR CID

    AGENT           shift and go to state 2

    agentDecl                      shift and go to state 3
    pgm                            shift and go to state 1

state 1

    (0) S' -> pgm .



state 2

    (2) agentDecl -> AGENT . BR CID

    BR              shift and go to state 4


state 3

    (1) pgm -> agentDecl . mwblock decls initblock
    (65) mwblock -> . MW LCURLY decls RCURLY

    MW              shift and go to state 6

    mwblock                        shift and go to state 5

state 4

    (2) agentDecl -> AGENT BR . CID

    CID             shift and go to state 7


state 5

    (1) pgm -> agentDecl mwblock . decls initblock
    (66) decls -> . decl decls
    (67) decls -> . sharedecl decls
    (68) decls -> . enumdecl decls
    (69) decls -> . mapdecl decls
    (70) decls -> . empty
    (72) decl -> . type varname SEMI
    (73) decl -> . type varname EQLS val SEMI
    (78) sharedecl -> . SHARED type varname SEMI
    (79) sharedecl -> . SHARED type varname EQLS val SEMI
    (75) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (74) mapdecl -> . MAP varname SEMI
    (71) empty -> .
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    SHARED          shift and go to state 21
    ENUM            shift and go to state 15
    MAP             shift and go to state 16
    INIT            reduce using rule 71 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    decl                           shift and go to state 8
    enumdecl                       shift and go to state 19
    mapdecl                        shift and go to state 11
    sharedecl                      shift and go to state 12
    decls                          shift and go to state 22
    type                           shift and go to state 13
    empty                          shift and go to state 14

state 6

    (65) mwblock -> MW . LCURLY decls RCURLY

    LCURLY          shift and go to state 23


state 7

    (2) agentDecl -> AGENT BR CID .

    MW              reduce using rule 2 (agentDecl -> AGENT BR CID .)


state 8

    (66) decls -> decl . decls
    (66) decls -> . decl decls
    (67) decls -> . sharedecl decls
    (68) decls -> . enumdecl decls
    (69) decls -> . mapdecl decls
    (70) decls -> . empty
    (72) decl -> . type varname SEMI
    (73) decl -> . type varname EQLS val SEMI
    (78) sharedecl -> . SHARED type varname SEMI
    (79) sharedecl -> . SHARED type varname EQLS val SEMI
    (75) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (74) mapdecl -> . MAP varname SEMI
    (71) empty -> .
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    SHARED          shift and go to state 21
    ENUM            shift and go to state 15
    MAP             shift and go to state 16
    INIT            reduce using rule 71 (empty -> .)
    RCURLY          reduce using rule 71 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 12
    enumdecl                       shift and go to state 19
    mapdecl                        shift and go to state 11
    decls                          shift and go to state 24
    type                           shift and go to state 13
    empty                          shift and go to state 14

state 9

    (96) type -> OBSTACLELIST .

    LID             reduce using rule 96 (type -> OBSTACLELIST .)
    CID             reduce using rule 96 (type -> OBSTACLELIST .)


state 10

    (95) type -> ITEMPOSITION .

    LID             reduce using rule 95 (type -> ITEMPOSITION .)
    CID             reduce using rule 95 (type -> ITEMPOSITION .)


state 11

    (69) decls -> mapdecl . decls
    (66) decls -> . decl decls
    (67) decls -> . sharedecl decls
    (68) decls -> . enumdecl decls
    (69) decls -> . mapdecl decls
    (70) decls -> . empty
    (72) decl -> . type varname SEMI
    (73) decl -> . type varname EQLS val SEMI
    (78) sharedecl -> . SHARED type varname SEMI
    (79) sharedecl -> . SHARED type varname EQLS val SEMI
    (75) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (74) mapdecl -> . MAP varname SEMI
    (71) empty -> .
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    SHARED          shift and go to state 21
    ENUM            shift and go to state 15
    MAP             shift and go to state 16
    INIT            reduce using rule 71 (empty -> .)
    RCURLY          reduce using rule 71 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 12
    enumdecl                       shift and go to state 19
    mapdecl                        shift and go to state 11
    decls                          shift and go to state 25
    type                           shift and go to state 13
    empty                          shift and go to state 14

state 12

    (67) decls -> sharedecl . decls
    (66) decls -> . decl decls
    (67) decls -> . sharedecl decls
    (68) decls -> . enumdecl decls
    (69) decls -> . mapdecl decls
    (70) decls -> . empty
    (72) decl -> . type varname SEMI
    (73) decl -> . type varname EQLS val SEMI
    (78) sharedecl -> . SHARED type varname SEMI
    (79) sharedecl -> . SHARED type varname EQLS val SEMI
    (75) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (74) mapdecl -> . MAP varname SEMI
    (71) empty -> .
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    SHARED          shift and go to state 21
    ENUM            shift and go to state 15
    MAP             shift and go to state 16
    INIT            reduce using rule 71 (empty -> .)
    RCURLY          reduce using rule 71 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 12
    enumdecl                       shift and go to state 19
    mapdecl                        shift and go to state 11
    decls                          shift and go to state 26
    type                           shift and go to state 13
    empty                          shift and go to state 14

state 13

    (72) decl -> type . varname SEMI
    (73) decl -> type . varname EQLS val SEMI
    (97) varname -> . LID
    (98) varname -> . CID

    LID             shift and go to state 27
    CID             shift and go to state 28

    varname                        shift and go to state 29

state 14

    (70) decls -> empty .

    INIT            reduce using rule 70 (decls -> empty .)
    RCURLY          reduce using rule 70 (decls -> empty .)


state 15

    (75) enumdecl -> ENUM . varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (97) varname -> . LID
    (98) varname -> . CID

    LID             shift and go to state 27
    CID             shift and go to state 28

    varname                        shift and go to state 30

state 16

    (74) mapdecl -> MAP . varname SEMI
    (97) varname -> . LID
    (98) varname -> . CID

    LID             shift and go to state 27
    CID             shift and go to state 28

    varname                        shift and go to state 31

state 17

    (92) type -> INT .

    LID             reduce using rule 92 (type -> INT .)
    CID             reduce using rule 92 (type -> INT .)


state 18

    (93) type -> FLOAT .

    LID             reduce using rule 93 (type -> FLOAT .)
    CID             reduce using rule 93 (type -> FLOAT .)


state 19

    (68) decls -> enumdecl . decls
    (66) decls -> . decl decls
    (67) decls -> . sharedecl decls
    (68) decls -> . enumdecl decls
    (69) decls -> . mapdecl decls
    (70) decls -> . empty
    (72) decl -> . type varname SEMI
    (73) decl -> . type varname EQLS val SEMI
    (78) sharedecl -> . SHARED type varname SEMI
    (79) sharedecl -> . SHARED type varname EQLS val SEMI
    (75) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (74) mapdecl -> . MAP varname SEMI
    (71) empty -> .
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    SHARED          shift and go to state 21
    ENUM            shift and go to state 15
    MAP             shift and go to state 16
    INIT            reduce using rule 71 (empty -> .)
    RCURLY          reduce using rule 71 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 12
    enumdecl                       shift and go to state 19
    mapdecl                        shift and go to state 11
    decls                          shift and go to state 32
    type                           shift and go to state 13
    empty                          shift and go to state 14

state 20

    (94) type -> BOOL .

    LID             reduce using rule 94 (type -> BOOL .)
    CID             reduce using rule 94 (type -> BOOL .)


state 21

    (78) sharedecl -> SHARED . type varname SEMI
    (79) sharedecl -> SHARED . type varname EQLS val SEMI
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    type                           shift and go to state 33

state 22

    (1) pgm -> agentDecl mwblock decls . initblock
    (3) initblock -> . INIT LPAREN RPAREN LCURLY events RCURLY

    INIT            shift and go to state 35

    initblock                      shift and go to state 34

state 23

    (65) mwblock -> MW LCURLY . decls RCURLY
    (66) decls -> . decl decls
    (67) decls -> . sharedecl decls
    (68) decls -> . enumdecl decls
    (69) decls -> . mapdecl decls
    (70) decls -> . empty
    (72) decl -> . type varname SEMI
    (73) decl -> . type varname EQLS val SEMI
    (78) sharedecl -> . SHARED type varname SEMI
    (79) sharedecl -> . SHARED type varname EQLS val SEMI
    (75) enumdecl -> . ENUM varname LCURLY varnames RCURLY varname EQLS varname SEMI
    (74) mapdecl -> . MAP varname SEMI
    (71) empty -> .
    (92) type -> . INT
    (93) type -> . FLOAT
    (94) type -> . BOOL
    (95) type -> . ITEMPOSITION
    (96) type -> . OBSTACLELIST

    SHARED          shift and go to state 21
    ENUM            shift and go to state 15
    MAP             shift and go to state 16
    RCURLY          reduce using rule 71 (empty -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    BOOL            shift and go to state 20
    ITEMPOSITION    shift and go to state 10
    OBSTACLELIST    shift and go to state 9

    decl                           shift and go to state 8
    sharedecl                      shift and go to state 12
    enumdecl                       shift and go to state 19
    mapdecl                        shift and go to state 11
    decls                          shift and go to state 36
    type                           shift and go to state 13
    empty                          shift and go to state 14

state 24

    (66) decls -> decl decls .

    INIT            reduce using rule 66 (decls -> decl decls .)
    RCURLY          reduce using rule 66 (decls -> decl decls .)


state 25

    (69) decls -> mapdecl decls .

    INIT            reduce using rule 69 (decls -> mapdecl decls .)
    RCURLY          reduce using rule 69 (decls -> mapdecl decls .)


state 26

    (67) decls -> sharedecl decls .

    INIT            reduce using rule 67 (decls -> sharedecl decls .)
    RCURLY          reduce using rule 67 (decls -> sharedecl decls .)


state 27

    (97) varname -> LID .

    LPAREN          reduce using rule 97 (varname -> LID .)
    SEMI            reduce using rule 97 (varname -> LID .)
    PLUS            reduce using rule 97 (varname -> LID .)
    MINUS           reduce using rule 97 (varname -> LID .)
    TIMES           reduce using rule 97 (varname -> LID .)
    BY              reduce using rule 97 (varname -> LID .)
    RPAREN          reduce using rule 97 (varname -> LID .)
    AND             reduce using rule 97 (varname -> LID .)
    OR              reduce using rule 97 (varname -> LID .)
    EQLS            reduce using rule 97 (varname -> LID .)
    EQ              reduce using rule 97 (varname -> LID .)
    NEQ             reduce using rule 97 (varname -> LID .)
    GEQ             reduce using rule 97 (varname -> LID .)
    LEQ             reduce using rule 97 (varname -> LID .)
    GE              reduce using rule 97 (varname -> LID .)
    LE              reduce using rule 97 (varname -> LID .)
    COMMA           reduce using rule 97 (varname -> LID .)
    RCURLY          reduce using rule 97 (varname -> LID .)
    INCR            reduce using rule 97 (varname -> LID .)
    LCURLY          reduce using rule 97 (varname -> LID .)


state 28

    (98) varname -> CID .
